--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -56,9 +56,9 @@
             </div>
             <div class="purchase-section">
                 <div class="action-buttons">
-                    <button class="btn primary-action" type="button">
-                        <i class="bi bi-cart-plus"></i>
-                        Ajouter au Panier
+                    <button class="btn primary-action" type="button" (click)="addToCart()">
+                      <i class="bi bi-cart-plus"></i>
+                      Ajouter au Panier
                     </button>
                 </div>
             </div>
