--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -18,13 +18,13 @@
           <button class="remove" (click)="remove(it)">Supprimer</button>
         </div>
       </div>
-      <div class="price">{{ (it.product.price * it.quantity) | number:'1.2-2' }} TND</div>
+      <div class="price">Prix sur demande WhatsApp</div>
     </div>
 
     <div class="cart-summary">
-      <div class="row"><span>Sous-total</span><span>{{ cart.getSubtotal() | number:'1.2-2' }} TND</span></div>
-      <div class="row"><span>TVA ({{ (cart.taxRate * 100) | number:'1.0-0' }}%)</span><span>{{ cart.getTax() | number:'1.2-2' }} TND</span></div>
-      <div class="row total"><span>Total</span><span>{{ cart.getTotal() | number:'1.2-2' }} TND</span></div>
+      <div class="row"><span>Sous-total</span><span>Prix sur demande WhatsApp</span></div>
+      <div class="row"><span>TVA ({{ (cart.taxRate * 100) | number:'1.0-0' }}%)</span><span>Prix sur demande WhatsApp</span></div>
+      <div class="row total"><span>Total</span><span>Prix sur demande WhatsApp</span></div>
     </div>
 
     <div class="cart-actions">
