--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -73,7 +73,7 @@
                       </svg>
                     </div>
                     <div class="product-meta">
-                      <div class="product-price">{{ product.price | number:'1.0-0' }} TND</div>
+                      <div class="product-price">Prix sur demande WhatsApp</div>
                     </div>
                   </div>
                 </div>
