--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -61,22 +61,22 @@
                   <span class="name">{{ item.product.name }}</span>
                   <span class="qty">x {{ item.quantity }}</span>
                 </div>
-                <span class="price">{{ (item.product.price * item.quantity) | number:'1.2-2' }} TND</span>
+                <span class="price">Prix sur demande WhatsApp</span>
               </div>
             </div>
             
             <div class="summary-totals">
               <div class="row">
                 <span>Sous-total</span>
-                <span>{{ cart.getSubtotal() | number:'1.2-2' }} TND</span>
+                <span>Prix sur demande WhatsApp</span>
               </div>
               <div class="row">
                 <span>TVA ({{ (cart.taxRate * 100) | number:'1.0-0' }}%)</span>
-                <span>{{ cart.getTax() | number:'1.2-2' }} TND</span>
+                <span>Prix sur demande WhatsApp</span>
               </div>
               <div class="row total">
                 <span>Total</span>
-                <span>{{ cart.getTotal() | number:'1.2-2' }} TND</span>
+                <span>Prix sur demande WhatsApp</span>
               </div>
             </div>
 
