--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -19,7 +19,7 @@
         <!-- Contact Information -->
         <div class="col-lg-5">
           <div class="contact-info-wrapper">
-            <h2 class="section-title">Nos Coordonnées</h2>
+                        <h2 class="section-title">Nos Coordonnées</h2>
 
             <div class="contact-info-item">
               <div class="info-icon">
@@ -27,21 +27,18 @@
               </div>
               <div class="info-content">
                 <h4>Adresse</h4>
-                <p>12 Rue de l'Innovation<br>Ariana 2080, Tunisie</p>
+                <p>📍Route Gremda km9 3012 Sfax, Tunisie</p>
               </div>
             </div>
-
             <div class="contact-info-item">
               <div class="info-icon">
                 <i class="bi bi-telephone"></i>
               </div>
               <div class="info-content">
                 <h4>Téléphone</h4>
-                <p><a href="tel:+21671123456">+216 71 123 456</a></p>
-                <p><a href="tel:+21620123456">+216 20 123 456</a></p>
+                <p><a href="tel:99809804">📱99809804</a></p>
               </div>
             </div>
-
             <div class="contact-info-item">
               <div class="info-icon">
                 <i class="bi bi-envelope"></i>
