--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,8 +38,7 @@
               <div class="product-info">
                 <h4>Cabine de Douche 'Prestige'</h4>
                 <div class="price">
-                  <span class="sale-price">1,899 TND</span>
-                  <span class="original-price">2,500 TND</span>
+                  <span class="sale-price">Prix sur demande WhatsApp</span>
                 </div>
 
               </div>
@@ -136,6 +135,7 @@
                 </svg>
               </div>
               <div class="product-price">1,250 TND</div>
+                          <div class="product-price">Prix sur demande WhatsApp</div>
             </div>
           </div>
         </div>
@@ -165,6 +165,7 @@
                 </svg>
               </div>
               <div class="product-price">1,450 TND</div>
+                          <div class="product-price">Prix sur demande WhatsApp</div>
             </div>
           </div>
         </div>
@@ -194,6 +195,7 @@
                 </svg>
               </div>
               <div class="product-price">1,100 TND</div>
+                          <div class="product-price">Prix sur demande WhatsApp</div>
             </div>
           </div>
         </div>
